# rust_server

./: Cargo.toml  action.html  comedy.html  drama.html  fiction.html  games.html  index.html  notfound.html  pg.html  temp.txt
src/: main.rs
