[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
select = "0.6.0"
stdweb = "0.4.20"
# tokio = { version = "1.26.0", features = ["full"] }
# reqwest = "0.11.14"
# # warp = "0.3.3"
# # serde = {version = "1.0", features = ["derive"] }
# # serde_json = "1.0.94"
# # validator = "0.16.0"
# # validator_derive = "0.16.0"
# # serde_path_to_error = "0.1.10"
# # thiserror = "1.0.39"
# # bytes = "1.4.0"
# html_editor = "0.5.2"
# mongodb = "2.1"
# bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
# tokio = "1"
# chrono = "0.4" # Used for setting DateTimes
# serde = "1" # Used in the Map Data into Structs section